# HackerNews-DIYgest

./: .gitignore  README.md  dump.sql  email_config.yaml  go.mod  hh.html  hn-hourly-scrape.py  hndigest.2.mustache.html  hndigest.mustache.html  pyproject.toml  requirements.txt  scrape.py  scrape.sh  stories.fields.sql  stories.sql
.github/workflows/: Defibrillate.yml  Flatline and Resuscitate.yml  HackerNews-DIYgest-Backup.yml  HackerNews-DIYgest-Mail.yaml  HackerNews-DIYgest-Scrape.yaml  HackerNews-DIYgest.yml  hacker-news-diygest-hourly-scrape.yml  hacker-news-hourly-scrape.yml  hourly-scrape.yml
css/: style.css
mustache/: hackernews.diygest.mustache.html  hackernews.diyjest.mustache.html  hackernews.diyjest.mustache.txt
sql/: stories.sql  stories.test.sql  top-3-titles.sql
